# AppleHealthDashboard

./: .gitignore  CONTRIBUTING.md  README.md  app.py  main.py  pyproject.toml  scratch_check_ecg.py  test_duckdb.py
.streamlit/: config.toml
apple_health_dashboard/: __init__.py  db.py  local_data.py  logging_config.py
apple_health_dashboard/ingest/: __init__.py  apple_health.py  apple_health_activity_summary.py  apple_health_records.py  apple_health_workouts.py  importer.py
apple_health_dashboard/services/: __init__.py  activity_summary.py  ai_insights.py  body.py  filters.py  forecasting.py  heart.py  insights.py  metrics.py  readiness.py  records_view.py  sleep.py  stats.py  streaks.py  units.py  weather.py  workouts.py
apple_health_dashboard/storage/: __init__.py  duckdb_store.py  notes_store.py  sqlite_store.py
apple_health_dashboard/web/: __init__.py  body_map.py  charts.py  explore.py  heatmaps.py  i18n.py  page_utils.py  ui.py
pages/: 10_⚙️_Settings.py  11_📈_Trends.py  12_🤖_Health_Chat.py  13_🥗_Nutrition.py  14_🚶_Mobility.py  15_🤒_Symptoms.py  1_📊_Overview.py  2_❤️_Heart.py  3_🏃_Activity.py  4_😴_Sleep.py  5_🏋️_Workouts.py  6_🔥_Rings.py  7_⚖️_Body.py  8_🔬_Explorer.py  9_💡_Insights.py
tests/: test_activity_summary_parser.py  test_datetime_parse.py  test_new_services.py  test_parser_small_xml.py  test_record_metadata_parser.py  test_summarize_by_day_agg_defensive.py
